# hdmi-hal

./: .coverage-baseline  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release-prep.yml  release-tag.yml
doc/: architecture.md  roadmap.md  setup.md
examples/simulate/: Cargo.toml
examples/simulate/src/: main.rs
src/: lib.rs
src/phy/: mod.rs
src/scdc/: mod.rs
